--- a/index.html
+++ b/index.html
@@ -14,14 +14,34 @@
     <h2>Projects</h2>
 
     <div class="container">
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
-        <div>4</div>
-        <div>5</div>
-        <div>6</div>
-        <div>7</div>
-        <div>8</div>
+        <div id="tictactoeImage">
+            <a href="https://birbothedev.github.io/tictactoe-jsproject2/" target="_blank">
+                <img alt="tictactoe" src="/images/tictactoe.png">
+            </a>
+        </div>
+        <div id="intelligenceCheckImage">
+            <a href="https://birbothedev.github.io/tictactoe-jsproject2/" target="_blank">
+                <img alt="tictactoe" src="/images/intelligenceCheck.png">
+            </a>
+        </div>
+        <div>3
+
+        </div>
+        <div>4
+
+        </div>
+        <div>5
+
+        </div>
+        <div>6
+
+        </div>
+        <div>7
+
+        </div>
+        <div>8
+
+        </div>
     </div>
 
     <script src="index/scripts.js"></script>
