--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </a>
         </div>
         <div id="intelligenceCheckImage">
-            <a href="https://birbothedev.github.io/tictactoe-jsproject2/" target="_blank">
+            <a href="https://birbothedev.github.io/js_final_project/" target="_blank">
                 <img alt="tictactoe" src="/images/intelligenceCheck.png">
             </a>
         </div>
