removed leading slash from images

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <div class="container">
         <div id="tictactoeImage">
             <a href="https://birbothedev.github.io/tictactoe-jsproject2/" target="_blank">
-                <img alt="tictactoe" src="/images/tictactoe.png">
+                <img alt="tictactoe" src="images/tictactoe.png">
             </a>
         </div>
         <div id="intelligenceCheckImage">
             <a href="https://birbothedev.github.io/js_final_project/" target="_blank">
-                <img alt="tictactoe" src="/images/intelligenceCheck.png">
+                <img alt="tictactoe" src="images/intelligenceCheck.png">
             </a>
         </div>
         <div>3
