change paths for font and images

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div id="intelligenceCheckImage">
             <a href="https://birbothedev.github.io/js_final_project/" target="_blank">
-                <img alt="tictactoe" src="images/intelligenceCheck.png">
+                <img alt="intelligenceCheck" src="images/intelligenceCheck.png">
             </a>
         </div>
         <div>3
