got everything looking as intended

--- a/index.html
+++ b/index.html
@@ -10,19 +10,25 @@
   <body>
 
     <h3>Gina Fender</h3>
+    <div class="links">
+        <a href="https://www.linkedin.com/in/gina-fender-223001276/" target="_blank">LinkedIn</a>
+        <a href="https://github.com/birbothedev" target="_blank">GitHub</a>
+    </div>
     <p>A passionate and adaptable software developer who thrives on learning new technologies and tackling complex challenges. Demonstrates a strong ability to learn on the fly, quickly adapt to new environments, and continuously expand technical skills with curiosity and dedication</p>
     <h2>Projects</h2>
 
     <div class="container">
-        <div id="tictactoeImage">
+        <div class="image-text-container">
             <a href="https://birbothedev.github.io/tictactoe-jsproject2/" target="_blank">
                 <img alt="tictactoe" src="images/tictactoe.png">
             </a>
+            <p>A tictactoe game built using HTML/CSS, and JavaScript. Players can take turns facing each other locally, or the player can choose to play against the computer.</p>
         </div>
-        <div id="intelligenceCheckImage">
+        <div class="image-text-container">
             <a href="https://birbothedev.github.io/js_final_project/" target="_blank">
                 <img alt="intelligenceCheck" src="images/intelligenceCheck.png">
             </a>
+            <p>A guessing game built using HTML/CSS, JavaScript, and the 5th Edition Dungeons and Dragons API to pull information about various spells in the DnD game.</p>
         </div>
         <div>3
 
