removed extra div text

--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
             </a>
             <p>A guessing game built using HTML/CSS, JavaScript, and the 5th Edition Dungeons and Dragons API to pull information about various spells in the DnD game.</p>
         </div>
-        <div>3
+        <div>
 
         </div>
-        <div>4
+        <div>
 
         </div>
-        <div>5
+        <div>
 
         </div>
-        <div>6
+        <div>
 
         </div>
-        <div>7
+        <div>
 
         </div>
-        <div>8
+        <div>
 
         </div>
     </div>
