added twitter project

--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
             </a>
             <p>A guessing game built using HTML/CSS, JavaScript, and the 5th Edition Dungeons and Dragons API to pull information about various spells in the DnD game.</p>
         </div>
-        <div>
-
-        </div>
+        <div class="image-text-container">
+            <a href="https://github.com/birbothedev/jsp-twitter-project/tree/main" target="_blank">
+                <img alt="intelligenceCheck" src="images/phpSite.png">
+            </a>
+            <p>A mock social media site made using JSP and MySQL.</p>
         <div>
 
         </div>
