updated portfolio with mushie game wip

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML 5 Boilerplate</title>
+    <title>Gina Fender Portfolio</title>
     <link rel="stylesheet" href="index/styles.css">
-  </head>
-  <body>
+</head>
+<body>
 
     <h3>Gina Fender</h3>
     <div class="links">
@@ -22,36 +22,32 @@
             <a href="https://birbothedev.github.io/tictactoe-jsproject2/" target="_blank">
                 <img alt="tictactoe" src="images/tictactoe.png">
             </a>
-            <p>A tictactoe game built using HTML/CSS, and JavaScript. Players can take turns facing each other locally, or the player can choose to play against the computer.</p>
+            <p>A tictactoe game built using HTML/CSS, and JavaScript. Players can take turns facing each other locally, or the player can choose to play against the computer.<br><a href=https://github.com/birbothedev/tictactoe-jsproject2/blob/main/scripts/scripts.js target="_blank">GitHub</a></p>
         </div>
+        
         <div class="image-text-container">
             <a href="https://birbothedev.github.io/js_final_project/" target="_blank">
                 <img alt="intelligenceCheck" src="images/intelligenceCheck.png">
             </a>
-            <p>A guessing game built using HTML/CSS, JavaScript, and the 5th Edition Dungeons and Dragons API to pull information about various spells in the DnD game.</p>
+            <p>A guessing game built using HTML/CSS, JavaScript, and the 5th Edition Dungeons and Dragons API to pull information about various spells in the DnD game.<br><a href=https://github.com/birbothedev/js_final_project/blob/main/scripts/scripts.js target="_blank">GitHub</a></p>
         </div>
+        
         <div class="image-text-container">
             <a href="https://github.com/birbothedev/jsp-twitter-project/tree/main" target="_blank">
-                <img alt="intelligenceCheck" src="images/phpSite.png">
+                <img alt="phpSite" src="images/phpSite.png">
             </a>
-            <p>A mock social media site made using JSP and MySQL.</p>
-        <div>
-
+            <p>A mock social media site made using JSP and MySQL.<br><a href="https://github.com/birbothedev/jsp-twitter-project/tree/main/src/java/yapspace" target="_blank">GitHub</a></p>
         </div>
-        <div>
 
-        </div>
-        <div>
-
-        </div>
-        <div>
-
-        </div>
-        <div>
-
+        <div class="image-text-container" style="grid-column: 1;">
+            <a href="https://birbothedev.github.io/mushie-game/" target="_blank">
+                <img alt="mushieGame" src="images/mushieGame.png">
+            </a>
+            <p>A work-in-progress browser game built with vanilla JavaScript, HTML, and CSS. Players avoid obstacles and enemies while trying to gain currency and buy upgrades.<br><a href="https://github.com/birbothedev/mushie-game/tree/main/scripts" target="_blank">GitHub</a></p>
         </div>
     </div>
 
+
     <script src="index/scripts.js"></script>
-  </body>
+</body>
 </html>
