added php site, need to add image

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         
         <div class="image-text-container">
             <a href="https://github.com/birbothedev/jsp-twitter-project/tree/main" target="_blank">
-                <img alt="phpSite" src="images/phpSite.png">
+                <img alt="jspSite" src="images/jspSite.png">
             </a>
             <p>A mock social media site made using JSP and MySQL.<br><a href="https://github.com/birbothedev/jsp-twitter-project/tree/main/src/java/yapspace" target="_blank">GitHub</a></p>
         </div>
@@ -44,6 +44,13 @@
                 <img alt="mushieGame" src="images/mushieGame.png">
             </a>
             <p>A work-in-progress browser game built with vanilla JavaScript, HTML, and CSS. Players avoid obstacles and enemies while trying to gain currency and buy upgrades.<br><a href="https://github.com/birbothedev/mushie-game/tree/main/scripts" target="_blank">GitHub</a></p>
+        </div>
+
+        <div class="image-text-container" style="grid-column: 1;">
+            <a href="https://github.com/Oakland-Community-College/cis2454-fall2024-project1-birbothedev/tree/main" target="_blank">
+                <img alt="phpSite" src="images/mushieGame.png">
+            </a>
+            <p>A mock stock trading site built using PHP and MySQL.<br><a href="https://github.com/Oakland-Community-College/cis2454-fall2024-project1-birbothedev/tree/main/PHPDatabaseProject1" target="_blank">GitHub</a></p>
         </div>
     </div>
 
