added placeholder image

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <div class="image-text-container" style="grid-column: 1;">
             <a href="https://github.com/Oakland-Community-College/cis2454-fall2024-project1-birbothedev/tree/main" target="_blank">
-                <img alt="phpSite" src="images/mushieGame.png">
+                <img alt="phpSite" src="images/placeholderImage.jpg">
             </a>
             <p>A mock stock trading site built using PHP and MySQL.<br><a href="https://github.com/Oakland-Community-College/cis2454-fall2024-project1-birbothedev/tree/main/PHPDatabaseProject1" target="_blank">GitHub</a></p>
         </div>
