--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <h3>Gina Fender</h3>
-    <h4>This portfolio site was built using Vanilla JS, HTML, and CSS. My <strong>new and improved</strong> portfolio site, built with ReactJS, is currently under construction and will be ready soon. Stay tuned!</h4>
+    <h4>This portfolio site was built using Vanilla JS, HTML, and CSS. My new and improved portfolio site, built with ReactJS, is currently under construction and will be ready soon. Stay tuned!</h4>
     <div class="links">
         <a href="https://www.linkedin.com/in/gina-fender-223001276/" target="_blank">LinkedIn</a>
         <a href="https://github.com/birbothedev" target="_blank">GitHub</a>
